Added more endpoints, fullfilled service and repository methods
